<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_to_favorite_list"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_star_24"
        android:title="@string/favorite_users">
    </item>

    <item
        android:id="@+id/action_to_preferences"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/app_preferences">
    </item>

</menu>